[metadata]
name = IsoNet
description = 
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.5
include_package_data = True
zip_safe = False
install_requires =
    mrcfile
    scipy
    fire
    tqdm
    PyQt5
    scikit-image=0.17.2


[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[options.entry_points]
console_scripts =
    debug_api = IsoNet.bin.isonet:main

[options.package_data]
* = *.txt, *.rst
hello = *.msg
